# AnkiHTMLCleaner

./: .gitignore  README.md  TAURI_RUST_FEASIBILITY.md  anki_cleaner.py  build-tauri.bat  build.bat  clean_anki_html.py
core/: anki_cleaner.py  clean.py  engine.py  extract.py  pack.py
frontend/: index.html  script.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clean.rs  extract.rs  lib.rs  main.rs  pack.rs
